update organization-service